Fix dark mode bug in button groups, remove button outlines in Chrome

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -246,3 +246,9 @@ pre {
 .nav-pills > li.active > a:focus {
     outline: 0;
 }
+
+/* no button outlines in Chrome--  */
+.btn-default.active,
+.btn-default.active.focus {
+    outline: 0;
+}
